feat(chat): add topBar, set static light theme, handle messages, integrate DeepSeek API, and implement ChatViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">UrFU AI</string>
+    <string name="home_title">Home</string>
+    <string name="chat_title">UrFU AI</string>
+    <string name="brs_title">BRS</string>
 </resources>
